radix-engine-tests/tests/dec_macros/src/dec_err_expr_not_supported.rs
use radix_engine_interface::prelude::*;

fn main() {
    // Invalid expression
    const X: Decimal = dec!(a);
    let _ = format!("{:?}", X);
}
